# jup-perps-client

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  add-jsdoc.ts  biome.json  example.ts  generate-client.ts  package.json  tsconfig.build.json
jup-perps-client-rust/: CHANGELOG.md  Cargo.toml  README.md
jup-perps-client-rust/examples/: basic_usage.rs
jup-perps-client-rust/src/: programs.rs  shared.rs
jup-perps-client-rust/src/accounts/: borrow_position.rs  custody.rs  mod.rs  perpetuals.rs  pool.rs  position.rs  position_request.rs  stake_info.rs  token_ledger.rs
jup-perps-client-rust/src/errors/: perpetuals.rs
jup-perps-client-rust/src/instructions/: add_custody.rs  add_liquidity2.rs  add_pool.rs  borrow_from_custody.rs  close_borrow_position.rs  close_position_request.rs  close_position_request2.rs  close_position_request3.rs  create_and_delegate_stake_account.rs  create_decrease_position_market_request.rs  create_decrease_position_request2.rs  create_increase_position_market_request.rs  create_token_ledger.rs  create_token_metadata.rs  decrease_position4.rs  decrease_position_with_internal_swap.rs  decrease_position_with_tpsl.rs  decrease_position_with_tpsl_and_internal_swap.rs  deposit_collateral_for_borrows.rs  get_add_liquidity_amount_and_fee2.rs  get_assets_under_management2.rs  get_remove_liquidity_amount_and_fee2.rs  increase_position4.rs  increase_position_pre_swap.rs  increase_position_with_internal_swap.rs  init.rs  instant_create_limit_order.rs  instant_create_tpsl.rs  instant_decrease_position.rs  instant_decrease_position2.rs  mod.rs  (+30 more)
(+117 files in other folders)
