[package]
name = "jup-perps-client"
version = "1.0.0"
edition = "2021"
description = "Rust client for Jupiter Perpetuals Protocol"
license = "MIT"
repository = "https://github.com/monakki/jup-perps-client"
keywords = ["solana", "jupiter", "perpetuals", "defi", "trading"]
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "jup_perps_client"
path = "src/lib.rs"

[dependencies]
anchor-lang = "0.31"
solana-program = "2.3"
solana-client = { version = "2.3", optional = true }
solana-account = { version = "2.2", optional = true }
borsh = "1.5"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"

[features]
default = ["fetch"]
fetch = ["dep:solana-client", "dep:solana-account"]
serde = ["dep:serde"]
anchor = []
anchor-idl-build = []

[dev-dependencies]
# Dependencies only for examples and tests
solana-client = "2.3"
solana-sdk = "2.3"
tokio = { version = "1.46", features = ["full"] }
